--- a/src/main/webapp/home/css/index.css
+++ b/src/main/webapp/home/css/index.css
@@ -1,6 +1,6 @@
 .notice{
     height: 38px; 
-    background: #eee;
+    background: #fff;
 }
 
 .notice_center{
@@ -72,102 +72,54 @@
 }
 
 .recommend{
-    width: 100%;
-    height: 820px;
-    background-color: #f3fbdd;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.recommend img:hover{
-    transform: scale(1.05);
-}
-
-.recommend img{
-    transition: all 0.8s;
-}
-
-.recommend .title{
-    background: url("../images/title01.png");
-    width: 391px;
-    height: 50px;
-    left: 404px;
-    top: 40px;
-    position: absolute;
-}
-
-.recommend .pd01{
-    position: absolute;
-    width: 1100px;
-    height: 316px;
-    left: 50px;
-    top: 120px;
+.recommend .col-md-4{
     background-color: #fff;
-    box-shadow: 4px 4px 6px #ccc;
+    border: 20px solid #F6F6F6;
 }
 
 .recommend a{
-    overflow: hidden;
     display: block;
     text-decoration: none;
-    cursor: pointer;
     outline: 0;
+    cursor: pointer;
 }
 
-.recommend .pd01 .pd_text{
-    position: absolute;
-    top: 0;
-    left: 672px;
-    width: 426px;
-    padding: 46px 0 93px 60px;
+.recommend img{
+    width: 310px;
+    height: 220px;
+    margin-top: 19px;
+    border-radius: 2px;
 }
 
-.recommend .pd_text h2{
-    color: gray;
-    font-size: 44px;
-    margin-bottom: 20px;
+.recommend h2{
+    font-size: 19px;
+    color: #666;
+    padding-left: 25px;
+    margin-bottom: 21px;
 }
 
-.recommend .pd_text h4{
-    color: #999;
-    font-size: 16px;
-    margin-bottom: 12px;
+.recommend h3{
+    padding-left: 25px;
+    font-weight: 500;
 }
 
-.recommend .pd_text .raise{
-    position: absolute;
-    top: 258px;
-    left: 296px;
-    color: #ffb527;
-    font-size: 16px;
-}
-
-.recommend .pd02{
-    position: absolute;
-    width: 1100px;
-    height: 316px;
-    left: 50px;
-    top: 448px;
-    background-color: #fff;
-    box-shadow: 4px 4px 6px #ccc;
-}
-
-.recommend .pd02 .pd_text{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 426px;
-    padding: 46px 0 93px 60px;
-}
-
-.recommend .pd02 img{
-    position: absolute;
-    top: 0;
-    left: 429px;
+.recommend span{
+    font-size: 14px;
+    color: #929292;
+    margin-right: 20px;
 }
 
 .tab_box {
     clear: both;
     position: relative;
 }
+
 .whitebg {
     background: #fff;
     border-radius: 3px;
